minor layout change for shelter details

--- a/P1/src/shelter_detail_user_view.html
+++ b/P1/src/shelter_detail_user_view.html
@@ -6,16 +6,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pet Shelter Detail</title>
     <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700,900&display=swap" rel="stylesheet" />
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/tw-elements/dist/css/tw-elements.min.css" />
+    <!-- <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/tw-elements/dist/css/tw-elements.min.css" /> -->
     <script src="https://cdn.tailwindcss.com/3.3.0"></script>
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/flowbite/1.8.1/flowbite.min.css" rel="stylesheet" />
+
+
 </head>
 
 <body>
     <script src="./nav_login_seeker.js"></script>
 
-    <div class="flex flex-col justify-center items-center bg-gray-100">
+    <div class="flex flex-col justify-center items-center bg-gray-50 py-3">
         <div class="flex justify-center items-center p-3">
-            <div class="rounded-full w-[50px] h-[50px] mr-1 mb-1">
+            <div class="rounded-full w-6 h-6  mr-2">
                 <img src="resources/shelter/shelter_logo.png">
             </div>
             <h1 class="text-2xl font-bold text-gray-900 md:text-3xl lg:text-3xl
@@ -25,7 +28,7 @@
             <div
                 class="flex flex-col border bg-white border-gray-300 rounded-lg shadow-[0_2px_15px_-3px_rgba(0,0,0,0.07),0_10px_20px_-2px_rgba(0,0,0,0.04)] md:flex-row md:max w-full">
                 <div class="p-4 relative w-full h-[500px]  overflow-auto">
-                    <h1 class="text-4xl mb-4">Mission Statement</h1>
+                    <h1 class="text-2xl mb-4 font-bold text-gray-900">Mission Statement</h1>
                     <p class="mb-6">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer eget elementum
                         lorem.
                         Etiam sodales ex ac pharetra lacinia. Aenean sit amet erat sed diam ultrices venenatis at ac
@@ -43,7 +46,7 @@
                         ut
                         nisl rutrum, ac vehicula nulla pellentesque. Morbi sagittis quam et luctus ullamcorper.
                     </p>
-                    <h1 class="text-4xl mb-4">Contact us!</h1>
+                    <h1 class="text-2xl mb-4 font-bold text-gray-900">Contact us!</h1>
                     <p>Our address is 10 Dundas St E Suite 900, Toronto, ON M7A 2A1. </p>
                     <p>If you have any questions, feel
                         free to visit us or call us at 416-123-1234 </p>
@@ -445,7 +448,7 @@
                         <ul class="my-1 flex list-none gap-1 p-0" data-te-rating-init data-te-readonly="true"
                             data-te-value="5">
                             <li>
-                                <span class="text-primary [&>svg]:h-5 [&>svg]:w-5" data-te-rating-icon-ref>
+                                <span class="text-blue-700 [&>svg]:h-5 [&>svg]:w-5" data-te-rating-icon-ref>
                                     <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24"
                                         stroke-width="1.5" stroke="currentColor">
                                         <path stroke-linecap="round" stroke-linejoin="round"
@@ -454,7 +457,7 @@
                                 </span>
                             </li>
                             <li>
-                                <span class="text-primary [&>svg]:h-5 [&>svg]:w-5" data-te-rating-icon-ref>
+                                <span class="text-blue-700 [&>svg]:h-5 [&>svg]:w-5" data-te-rating-icon-ref>
                                     <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24"
                                         stroke-width="1.5" stroke="currentColor">
                                         <path stroke-linecap="round" stroke-linejoin="round"
@@ -463,7 +466,7 @@
                                 </span>
                             </li>
                             <li>
-                                <span class="text-primary [&>svg]:h-5 [&>svg]:w-5" data-te-rating-icon-ref>
+                                <span class="text-blue-700 [&>svg]:h-5 [&>svg]:w-5" data-te-rating-icon-ref>
                                     <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24"
                                         stroke-width="1.5" stroke="currentColor">
                                         <path stroke-linecap="round" stroke-linejoin="round"
@@ -472,7 +475,7 @@
                                 </span>
                             </li>
                             <li>
-                                <span class="text-primary [&>svg]:h-5 [&>svg]:w-5" data-te-rating-icon-ref>
+                                <span class="text-blue-700 [&>svg]:h-5 [&>svg]:w-5" data-te-rating-icon-ref>
                                     <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24"
                                         stroke-width="1.5" stroke="currentColor">
                                         <path stroke-linecap="round" stroke-linejoin="round"
@@ -481,7 +484,7 @@
                                 </span>
                             </li>
                             <li>
-                                <span class="text-primary [&>svg]:h-5 [&>svg]:w-5" data-te-rating-icon-ref>
+                                <span class="text-blue-700 [&>svg]:h-5 [&>svg]:w-5" data-te-rating-icon-ref>
                                     <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24"
                                         stroke-width="1.5" stroke="currentColor">
                                         <path stroke-linecap="round" stroke-linejoin="round"
@@ -566,7 +569,7 @@
                         <ul class="my-1 flex list-none gap-1 p-0" data-te-rating-init data-te-readonly="true"
                             data-te-value="3">
                             <li>
-                                <span class="text-primary [&>svg]:h-5 [&>svg]:w-5" data-te-rating-icon-ref>
+                                <span class="text-blue-700 [&>svg]:h-5 [&>svg]:w-5" data-te-rating-icon-ref>
                                     <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24"
                                         stroke-width="1.5" stroke="currentColor">
                                         <path stroke-linecap="round" stroke-linejoin="round"
@@ -575,7 +578,7 @@
                                 </span>
                             </li>
                             <li>
-                                <span class="text-primary [&>svg]:h-5 [&>svg]:w-5" data-te-rating-icon-ref>
+                                <span class="text-blue-700 [&>svg]:h-5 [&>svg]:w-5" data-te-rating-icon-ref>
                                     <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24"
                                         stroke-width="1.5" stroke="currentColor">
                                         <path stroke-linecap="round" stroke-linejoin="round"
@@ -584,7 +587,7 @@
                                 </span>
                             </li>
                             <li>
-                                <span class="text-primary [&>svg]:h-5 [&>svg]:w-5" data-te-rating-icon-ref>
+                                <span class="text-blue-700 [&>svg]:h-5 [&>svg]:w-5" data-te-rating-icon-ref>
                                     <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24"
                                         stroke-width="1.5" stroke="currentColor">
                                         <path stroke-linecap="round" stroke-linejoin="round"
@@ -593,7 +596,7 @@
                                 </span>
                             </li>
                             <li>
-                                <span class="text-primary [&>svg]:h-5 [&>svg]:w-5" data-te-rating-icon-ref>
+                                <span class="text-blue-700 [&>svg]:h-5 [&>svg]:w-5" data-te-rating-icon-ref>
                                     <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24"
                                         stroke-width="1.5" stroke="currentColor">
                                         <path stroke-linecap="round" stroke-linejoin="round"
@@ -602,7 +605,7 @@
                                 </span>
                             </li>
                             <li>
-                                <span class="text-primary [&>svg]:h-5 [&>svg]:w-5" data-te-rating-icon-ref>
+                                <span class="text-blue-700 [&>svg]:h-5 [&>svg]:w-5" data-te-rating-icon-ref>
                                     <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24"
                                         stroke-width="1.5" stroke="currentColor">
                                         <path stroke-linecap="round" stroke-linejoin="round"
@@ -683,7 +686,7 @@
                     <div>
                         <ul class="my-2 flex list-none gap-1 p-0" data-te-rating-init>
                             <li>
-                                <span class="text-primary [&>svg]:h-5 [&>svg]:w-5" title="Bad" data-te-rating-icon-ref>
+                                <span class="text-blue-700 [&>svg]:h-5 [&>svg]:w-5" title="Bad" data-te-rating-icon-ref>
                                     <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24"
                                         stroke-width="1.5" stroke="currentColor">
                                         <path stroke-linecap="round" stroke-linejoin="round"
@@ -692,7 +695,7 @@
                                 </span>
                             </li>
                             <li>
-                                <span class="text-primary [&>svg]:h-5 [&>svg]:w-5" title="Poor" data-te-rating-icon-ref>
+                                <span class="text-blue-700 [&>svg]:h-5 [&>svg]:w-5" title="Poor" data-te-rating-icon-ref>
                                     <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24"
                                         stroke-width="1.5" stroke="currentColor">
                                         <path stroke-linecap="round" stroke-linejoin="round"
@@ -701,7 +704,7 @@
                                 </span>
                             </li>
                             <li>
-                                <span class="text-primary [&>svg]:h-5 [&>svg]:w-5" title="OK" data-te-rating-icon-ref>
+                                <span class="text-blue-700 [&>svg]:h-5 [&>svg]:w-5" title="OK" data-te-rating-icon-ref>
                                     <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24"
                                         stroke-width="1.5" stroke="currentColor">
                                         <path stroke-linecap="round" stroke-linejoin="round"
@@ -710,7 +713,7 @@
                                 </span>
                             </li>
                             <li>
-                                <span class="text-primary [&>svg]:h-5 [&>svg]:w-5" title="Good" data-te-rating-icon-ref>
+                                <span class="text-blue-700 [&>svg]:h-5 [&>svg]:w-5" title="Good" data-te-rating-icon-ref>
                                     <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24"
                                         stroke-width="1.5" stroke="currentColor">
                                         <path stroke-linecap="round" stroke-linejoin="round"
@@ -719,7 +722,7 @@
                                 </span>
                             </li>
                             <li>
-                                <span class="text-primary [&>svg]:h-5 [&>svg]:w-5" title="Excellent"
+                                <span class="text-blue-700 [&>svg]:h-5 [&>svg]:w-5" title="Excellent"
                                     data-te-rating-icon-ref>
                                     <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24"
                                         stroke-width="1.5" stroke="currentColor">
