--- a/P1/src/pet_detail_editable.html
+++ b/P1/src/pet_detail_editable.html
@@ -122,7 +122,7 @@
                                     alt="..." />
                                 <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24"
                                     stroke-width="1.5" stroke="currentColor"
-                                    class="absolute top-2 right-2 w-12 h-12 lg:w-14 lg:h-14 hover:cursor-pointer hover:scale-110">
+                                    class="absolute top-2 text-gray-700 right-2 w-12 h-12 lg:w-14 lg:h-14 hover:cursor-pointer hover:scale-110">
                                     <path stroke-linecap="round" stroke-linejoin="round"
                                         d="M15 12H9m12 0a9 9 0 11-18 0 9 9 0 0118 0z" />
                                 </svg>
