--- a/P1/src/shelter_detail_shelter_view.html
+++ b/P1/src/shelter_detail_shelter_view.html
@@ -6,8 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pet Shelter Detail</title>
     <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700,900&display=swap" rel="stylesheet" />
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/tw-elements/dist/css/tw-elements.min.css" />
+    <!-- <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/tw-elements/dist/css/tw-elements.min.css" /> -->
     <script src="https://cdn.tailwindcss.com/3.3.0"></script>
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/flowbite/1.8.1/flowbite.min.css" rel="stylesheet" />
+
 
 
 </head>
@@ -15,10 +17,10 @@
 <body>
 
     <script src="./nav_login_shelter.js"></script>
-    <div class="flex flex-col justify-center items-center bg-gray-100">
-
+    <div class="flex flex-col justify-center items-center bg-gray-50 py-3">
+        <!-- edit icon -->
         <div
-            class="bg-white rounded-full border border-gray-300 fixed hidden md:block top-0 right-0 w-[100px] m-3 p-3 z-50 shadow-[0_2px_15px_-3px_rgba(0,0,0,0.07),0_10px_20px_-2px_rgba(0,0,0,0.04)]">
+            class="bg-white rounded-full border border-gray-300 fixed hidden md:block w-12 h-12 lg:w-14 lg:h-14 right-8 lg:right-18 xl:right-24 top-24 p-2 z-50 shadow-[0_2px_15px_-3px_rgba(0,0,0,0.07),0_10px_20px_-2px_rgba(0,0,0,0.04)]">
             <a href="./shelter_detail_editable.html">
                 <svg class="w-full hover:scale-110" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24"
                     stroke-width="1.5" stroke="currentColor" class="w-6 h-6">
@@ -27,7 +29,7 @@
                 </svg>
             </a>
         </div>
-
+        <!-- appear in iphone -->
         <div
             class="bg-white rounded-full border border-gray-300 fixed md:hidden bottom-0 right-0 w-16 m-3 p-3 z-50 shadow-[0_2px_15px_-3px_rgba(0,0,0,0.07),0_10px_20px_-2px_rgba(0,0,0,0.04)]">
             <a href="./shelter_detail_editable.html">
@@ -40,7 +42,7 @@
         </div>
 
         <div class="flex justify-center items-center p-3">
-            <div class="rounded-full w-[50px] h-[50px] mr-1 mb-1">
+            <div class="rounded-full w-6 h-6 mr-2 ">
                 <img src="resources/shelter/shelter_logo.png">
             </div>
             <h1 class="text-2xl font-bold text-gray-900 md:text-3xl lg:text-3xl
@@ -50,7 +52,7 @@
             <div
                 class="flex flex-col border bg-white border-gray-300 rounded-lg shadow-[0_2px_15px_-3px_rgba(0,0,0,0.07),0_10px_20px_-2px_rgba(0,0,0,0.04)] md:flex-row md:max w-full">
                 <div class="p-4 relative w-full h-[500px]  overflow-auto">
-                    <h1 class="text-4xl mb-4">Mission Statement</h1>
+                    <h1 class="text-2xl mb-4 font-bold text-gray-900">Mission Statement</h1>
                     <p class="mb-6">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer eget elementum
                         lorem.
                         Etiam sodales ex ac pharetra lacinia. Aenean sit amet erat sed diam ultrices venenatis at ac
@@ -68,7 +70,7 @@
                         ut
                         nisl rutrum, ac vehicula nulla pellentesque. Morbi sagittis quam et luctus ullamcorper.
                     </p>
-                    <h1 class="text-4xl mb-4">Contact us!</h1>
+                    <h1 class="text-2xl mb-4 font-bold text-gray-900">Contact us!</h1>
                     <p>Our address is 10 Dundas St E Suite 900, Toronto, ON M7A 2A1. </p>
                     <p>If you have any questions, feel
                         free to visit us or call us at 416-123-1234 </p>
@@ -469,7 +471,7 @@
                         <ul class="my-1 flex list-none gap-1 p-0" data-te-rating-init data-te-readonly="true"
                             data-te-value="5">
                             <li>
-                                <span class="text-primary [&>svg]:h-5 [&>svg]:w-5" data-te-rating-icon-ref>
+                                <span class="text-blue-700 [&>svg]:h-5 [&>svg]:w-5" data-te-rating-icon-ref>
                                     <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24"
                                         stroke-width="1.5" stroke="currentColor">
                                         <path stroke-linecap="round" stroke-linejoin="round"
@@ -478,7 +480,7 @@
                                 </span>
                             </li>
                             <li>
-                                <span class="text-primary [&>svg]:h-5 [&>svg]:w-5" data-te-rating-icon-ref>
+                                <span class="text-blue-700 [&>svg]:h-5 [&>svg]:w-5" data-te-rating-icon-ref>
                                     <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24"
                                         stroke-width="1.5" stroke="currentColor">
                                         <path stroke-linecap="round" stroke-linejoin="round"
@@ -487,7 +489,7 @@
                                 </span>
                             </li>
                             <li>
-                                <span class="text-primary [&>svg]:h-5 [&>svg]:w-5" data-te-rating-icon-ref>
+                                <span class="text-blue-700 [&>svg]:h-5 [&>svg]:w-5" data-te-rating-icon-ref>
                                     <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24"
                                         stroke-width="1.5" stroke="currentColor">
                                         <path stroke-linecap="round" stroke-linejoin="round"
@@ -496,7 +498,7 @@
                                 </span>
                             </li>
                             <li>
-                                <span class="text-primary [&>svg]:h-5 [&>svg]:w-5" data-te-rating-icon-ref>
+                                <span class="text-blue-700 [&>svg]:h-5 [&>svg]:w-5" data-te-rating-icon-ref>
                                     <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24"
                                         stroke-width="1.5" stroke="currentColor">
                                         <path stroke-linecap="round" stroke-linejoin="round"
@@ -505,7 +507,7 @@
                                 </span>
                             </li>
                             <li>
-                                <span class="text-primary [&>svg]:h-5 [&>svg]:w-5" data-te-rating-icon-ref>
+                                <span class="text-blue-700 [&>svg]:h-5 [&>svg]:w-5" data-te-rating-icon-ref>
                                     <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24"
                                         stroke-width="1.5" stroke="currentColor">
                                         <path stroke-linecap="round" stroke-linejoin="round"
@@ -590,7 +592,7 @@
                         <ul class="my-1 flex list-none gap-1 p-0" data-te-rating-init data-te-readonly="true"
                             data-te-value="3">
                             <li>
-                                <span class="text-primary [&>svg]:h-5 [&>svg]:w-5" data-te-rating-icon-ref>
+                                <span class="text-blue-700 [&>svg]:h-5 [&>svg]:w-5" data-te-rating-icon-ref>
                                     <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24"
                                         stroke-width="1.5" stroke="currentColor">
                                         <path stroke-linecap="round" stroke-linejoin="round"
@@ -599,7 +601,7 @@
                                 </span>
                             </li>
                             <li>
-                                <span class="text-primary [&>svg]:h-5 [&>svg]:w-5" data-te-rating-icon-ref>
+                                <span class="text-blue-700 [&>svg]:h-5 [&>svg]:w-5" data-te-rating-icon-ref>
                                     <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24"
                                         stroke-width="1.5" stroke="currentColor">
                                         <path stroke-linecap="round" stroke-linejoin="round"
@@ -608,7 +610,7 @@
                                 </span>
                             </li>
                             <li>
-                                <span class="text-primary [&>svg]:h-5 [&>svg]:w-5" data-te-rating-icon-ref>
+                                <span class="text-blue-700 [&>svg]:h-5 [&>svg]:w-5" data-te-rating-icon-ref>
                                     <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24"
                                         stroke-width="1.5" stroke="currentColor">
                                         <path stroke-linecap="round" stroke-linejoin="round"
@@ -617,7 +619,7 @@
                                 </span>
                             </li>
                             <li>
-                                <span class="text-primary [&>svg]:h-5 [&>svg]:w-5" data-te-rating-icon-ref>
+                                <span class="text-blue-700 [&>svg]:h-5 [&>svg]:w-5" data-te-rating-icon-ref>
                                     <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24"
                                         stroke-width="1.5" stroke="currentColor">
                                         <path stroke-linecap="round" stroke-linejoin="round"
@@ -626,7 +628,7 @@
                                 </span>
                             </li>
                             <li>
-                                <span class="text-primary [&>svg]:h-5 [&>svg]:w-5" data-te-rating-icon-ref>
+                                <span class="text-blue-700 [&>svg]:h-5 [&>svg]:w-5" data-te-rating-icon-ref>
                                     <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24"
                                         stroke-width="1.5" stroke="currentColor">
                                         <path stroke-linecap="round" stroke-linejoin="round"
@@ -711,57 +713,8 @@
 
     </div>
 
-    <footer class="bg-gray-200 rounded-lg shadow">
-        <div class="w-full max-w-screen-xl mx-auto p-4 py-8 lg:py-12 lg:pb-16">
-            <div class="sm:flex sm:items-center sm:justify-between">
-                <a href="https://flowbite.com/" class="flex items-center mb-4 sm:mb-0">
-                    <!-- <img src="https://flowbite.com/docs/images/logo.svg" class="h-8 mr-3" alt="Flowbite Logo" /> -->
-                    <span class="self-center text-2xl font-semibold whitespace-nowrap">Pet Pal</span>
-                </a>
-                <ul class="flex flex-wrap items-center mb-6 text-sm font-medium text-gray-500 sm:mb-0 ">
-                    <li>
-                        <a href="#" class="mr-4 hover:underline md:mr-6 ">About</a>
-                    </li>
-                    <li>
-                        <a href="#" class="mr-4 hover:underline md:mr-6">Privacy Policy</a>
-                    </li>
-                    <li>
-                        <a href="#" class="mr-4 hover:underline md:mr-6 ">Licensing</a>
-                    </li>
-                    <li>
-                        <a href="#" class="hover:underline">Contact</a>
-                    </li>
-                </ul>
-            </div>
-            <hr class="my-6 border-gray-200 sm:mx-auto lg:my-6" />
-            <div class="sm:flex sm:items-center sm:justify-between">
-                <span class="text-sm text-gray-500 sm:text-center">© 2023 <a href="https://flowbite.com/"
-                        class="hover:underline">
-                        PetPal™</a>. All Rights Reserved.
-                </span>
-                <div class="flex mt-4 space-x-5 sm:justify-center sm:mt-0">
-                    <a href="#" class="text-gray-500 hover:text-gray-900">
-                        <svg class="w-4 h-4 md:w-5 md:h-5" aria-hidden="true" xmlns="http://www.w3.org/2000/svg"
-                            fill="currentColor" viewBox="0 0 8 19">
-                            <path fill-rule="evenodd"
-                                d="M6.135 3H8V0H6.135a4.147 4.147 0 0 0-4.142 4.142V6H0v3h2v9.938h3V9h2.021l.592-3H5V3.591A.6.6 0 0 1 5.592 3h.543Z"
-                                clip-rule="evenodd" />
-                        </svg>
-                        <span class="sr-only">Facebook page</span>
-                    </a>
-                    <a href="#" class="text-gray-500 hover:text-gray-900">
-                        <svg class="w-4 h-4 md:w-5 md:h-5" aria-hidden="true" xmlns="http://www.w3.org/2000/svg"
-                            fill="currentColor" viewBox="0 0 20 17">
-                            <path fill-rule="evenodd"
-                                d="M20 1.892a8.178 8.178 0 0 1-2.355.635 4.074 4.074 0 0 0 1.8-2.235 8.344 8.344 0 0 1-2.605.98A4.13 4.13 0 0 0 13.85 0a4.068 4.068 0 0 0-4.1 4.038 4 4 0 0 0 .105.919A11.705 11.705 0 0 1 1.4.734a4.006 4.006 0 0 0 1.268 5.392 4.165 4.165 0 0 1-1.859-.5v.05A4.057 4.057 0 0 0 4.1 9.635a4.19 4.19 0 0 1-1.856.07 4.108 4.108 0 0 0 3.831 2.807A8.36 8.36 0 0 1 0 14.184 11.732 11.732 0 0 0 6.291 16 11.502 11.502 0 0 0 17.964 4.5c0-.177 0-.35-.012-.523A8.143 8.143 0 0 0 20 1.892Z"
-                                clip-rule="evenodd" />
-                        </svg>
-                        <span class="sr-only">Twitter page</span>
-                    </a>
-                </div>
-            </div>
-        </div>
-    </footer>
+    <footer ></footer>
+    <script src="footer_shelter.js"></script>
 
     <script src="https://cdn.jsdelivr.net/npm/tw-elements/dist/js/tw-elements.umd.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/flowbite/1.8.1/flowbite.min.js"></script>
