changed error message for shelter signup

--- a/P1/src/shelter_signup_error.html
+++ b/P1/src/shelter_signup_error.html
@@ -32,7 +32,7 @@
                         <div class="mb-4">
                             <label for="email" class="block mb-2 text-sm font-medium text-red-500">Email address</label>
                             <input type="email" id="email" class="bg-gray-50 border border-red-500 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5" placeholder="torontocentre@company.com" required>
-                            <p id="outlined_error_help" class="mt-2 text-xs text-red-600"><span class="font-medium">This email is already in-use</span></p>    
+                            <p id="outlined_error_help" class="mt-2 text-xs text-red-600"><span class="font-medium">Invalid email format</span></p>    
 
                         </div> 
                         <!-- Password -->
