fixed link issue

--- a/P1/src/pet_detail_shelter_view.html
+++ b/P1/src/pet_detail_shelter_view.html
@@ -17,9 +17,9 @@
 
     <div class="flex flex-col justify-center items-center bg-gray-50 py-3">
         <div class="flex justify-center items-center p-3">
-            <a href="shelter_detail_user_view.html"
+            <a href="shelter_detail_shelter_view.html"
                 class="relative flex justify-center text-center items-center transform transition duration-300 hover:scale-105">
-                <div class="rounded-full w-6 h-6 mr-2 mb-1">
+                <div class="rounded-full w-6 h-6 mr-2">
                     <img src="resources/shelter/shelter_logo.png">
                 </div>
                 <h1 class="text-2xl font-bold text-gray-900 md:text-3xl lg:text-3xl">Toronto Adoption Center</h1>
@@ -32,7 +32,7 @@
                 </div>
             </a>
 
-            <div class="bg-white rounded-full border border-gray-300 hidden md:inline-block fixed w-12 h-12 right-8 lg:top-22 lg:right-18 xl:right-24 lg:w-14 lg:h-14 ml-80 p-2 z-50 shadow-[0_2px_15px_-3px_rgba(0,0,0,0.07),0_10px_20px_-2px_rgba(0,0,0,0.04)]">
+            <div class="bg-white rounded-full border border-gray-300 hidden md:block fixed w-12 h-12 right-8 lg:top-24 lg:right-18 xl:right-24 lg:w-14 lg:h-14 ml-80 p-2 z-50 shadow-[0_2px_15px_-3px_rgba(0,0,0,0.07),0_10px_20px_-2px_rgba(0,0,0,0.04)]">
                 <a href="./pet_detail_editable.html">
                     <svg class="hover:scale-110" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24"
                         stroke-width="1.5" stroke="currentColor" class="w-6 h-6">
