--- a/P1/src/pet_adoption.html
+++ b/P1/src/pet_adoption.html
@@ -42,7 +42,7 @@
             <section id="application">
 
                 <form action="https://postman-echo.com/post" class="shadow form mb-4 m-3">
-                
+
                     <div class="bg-white border border-gray-200 p-4 sm:p-7 rounded-lg" style="max-width: 100%;">
                         <div class=" flex text-xl md:text-2xl font-bold text-gray-900 mb-1">
                             Adoption Application, Contract, and Waiver
@@ -216,11 +216,14 @@
 
                     </div>
                 </form>
-                <a class="flex justify-center" href="pet_adoption_error.html">
 
-                    <button type="button"
-                        class="text-white bg-gray-800 hover:bg-gray-900 focus:outline-none focus:ring-4 focus:ring-gray-300 font-medium rounded-lg text-sm px-5 py-2.5 mr-2 mb-2 dark:bg-gray-800 dark:hover:bg-gray-700 dark:focus:ring-gray-700 dark:border-gray-700">Submit</button>
-                </a>
+                <div class="flex justify-center">
+                    <a class="flex justify-center" href="pet_adoption_error.html">
+                        <button type="button"
+                            class="text-white bg-gray-800 hover:bg-gray-900 focus:outline-none focus:ring-4 focus:ring-gray-300 font-medium rounded-lg text-sm px-5 py-2.5 mr-2 mb-2 dark:bg-gray-800 dark:hover:bg-gray-700 dark:focus:ring-gray-700 dark:border-gray-700">Submit</button>
+                    </a>
+                </div>
+
             </section>
 
         </div>
