--- a/P1/src/shelter_application.html
+++ b/P1/src/shelter_application.html
@@ -14,7 +14,7 @@
 </head>
 
 <body>
-    <script src="./nav_login_seeker.js"></script>
+    <script src="./nav_login_shelter.js"></script>
 
     <div class="flex flex-col justify-center items-center bg-gray-50 py-4">
         <div class="flex justify-center items-center p-3">
@@ -40,7 +40,7 @@
             aria-label="Breadcrumb">
             <ol class="flex flex-wrap items-center space-x-1 md:space-x-3 justify-start">
                 <li class="mb-1 md:mb-0">
-                    <a href="./main_after_login.html"
+                    <a href="./main_after_login_shelter.html"
                         class="inline-flex items-center text-sm font-medium text-gray-700 hover:text-blue-600 dark:text-gray-400 dark:hover:text-white">
                         <svg class="w-3 h-3 mr-2.5" aria-hidden="true" xmlns="http://www.w3.org/2000/svg"
                             fill="currentColor" viewBox="0 0 20 20">
@@ -190,7 +190,7 @@
                 <section id="application">
                     <form action="https://postman-echo.com/post" class="mb-4 m-3 shadow form">
                         <div class="bg-white border border-gray-200 p-4 sm:p-7 rounded-lg" style="max-width: 100%;">
-                            
+
                             <div class="grid-cols-2 sm:grid md:grid-cols-1 gap-4">
                                 <label for="pet_name" class="mt-1 p-2 block font-bold text-gray-700">Name of Pet You
                                     Wish to
