--- a/P1/src/pet_adoption_error.html
+++ b/P1/src/pet_adoption_error.html
@@ -20,7 +20,6 @@
         <div class="flex justify-center items-center p-3">
             <a href="shelter_detail_user_view.html"
                 class="relative flex justify-center text-center items-center transform transition duration-300 hover:scale-105">
-                <!-- logo image -->
                 <div class="rounded-full w-6 h-6 mr-2 mb-1">
                     <img src="resources/shelter/shelter_logo.png">
                 </div>
@@ -39,9 +38,10 @@
 
 
         <div class="ml-4 mr-4 mb-4" style="max-width: 100%;">
-            <section id="application">
 
-                <form action="https://postman-echo.com/post" class="shadow form mb-4 m-3">
+
+            <form action="thank_you_application.html" class="form mb-4 m-3">
+                <section id="application">
                     <!-- <div class=" flex text-3xl font-semibold justify-center p-3 text-gray-900">
                         Adoption Application, Contract, and Waiver
                     </div> -->
@@ -244,14 +244,16 @@
                         </div>
 
                     </div>
-                </form>
-                <a class="flex justify-center" href="thank_you_application.html">
 
-                    <button type="button"
-                        class="text-white bg-gray-800 hover:bg-gray-900 focus:outline-none focus:ring-4 focus:ring-gray-300 font-medium rounded-lg text-sm px-5 py-2.5 mr-2 mb-2 dark:bg-gray-800 dark:hover:bg-gray-700 dark:focus:ring-gray-700 dark:border-gray-700">Submit</button>
-                </a>
-            </section>
 
+                </section>
+                <div class="flex justify-center mt-4">
+                    <a class="flex justify-center" href="thank_you_application.html">
+                        <button type="submit"
+                            class="text-white bg-gray-800 hover:bg-gray-900 focus:outline-none focus:ring-4 focus:ring-gray-300 font-medium rounded-lg text-sm px-5 py-2.5 mr-2 mb-2 dark:bg-gray-800 dark:hover:bg-gray-700 dark:focus:ring-gray-700 dark:border-gray-700">Submit</button>
+                    </a>
+                </div>
+            </form>
         </div>
     </div>
     <script src="./footer_seeker.js"></script>
