--- a/P1/src/user_application.html
+++ b/P1/src/user_application.html
@@ -40,7 +40,7 @@
             aria-label="Breadcrumb">
             <ol class="flex flex-wrap items-center space-x-1 md:space-x-3 justify-start">
                 <li class="mb-1 md:mb-0">
-                    <a href="main/main_after_login.html"
+                    <a href="main_after_login.html"
                         class="inline-flex items-center text-sm font-medium text-gray-700 hover:text-blue-600 dark:text-gray-400 dark:hover:text-white">
                         <svg class="w-3 h-3 mr-2.5" aria-hidden="true" xmlns="http://www.w3.org/2000/svg"
                             fill="currentColor" viewBox="0 0 20 20">
