--- a/P1/src/shelter_update.html
+++ b/P1/src/shelter_update.html
@@ -11,9 +11,7 @@
     <title>Sign Up - Shelter 2</title>
 </head>
 <body>
-    <header>
-        <script src="nav_login_shelter.js" > </script>
-    </header>
+        <script src="nav_login_shelter.js"> </script>
     <!-- Shelter Sign Up -->
     <section class="bg-gray-50">
         <div class="flex flex-col items-center justify-center px-6 py-8">
@@ -35,7 +33,7 @@
                                     <input id="dropzone-file" type="file" class="hidden" />
                                 </label>
                                 <div>
-                                    <img class="w-14 h-14 md:w-14 md:h-14 rounded-full object-cover" src="./resources/shelter/shelter_logo.png" alt="">
+                                    <img class="w-14 h-14 md:w-14 md:h-14 rounded-full " src="./resources/shelter/shelter_logo.png" alt="">
                                 </div>
                             </div>
                             <p class="block text-sm font-normal text-gray-700 text-center">Upload Shelter Logo</p>
