--- a/P1/src/login.html
+++ b/P1/src/login.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -10,17 +11,18 @@
     <title>Log In</title>
 
 </head>
+
 <body>
     <header>
         <nav class="z-10 w-full md:fixed">
             <div class="max-w-screen-xl flex flex-wrap items-center justify-between mx-auto p-4">
-            <a href="./main.html" class="flex items-center">
-                <span class="self-center text-3xl font-bold whitespace-nowrap">Pet Pal</span>
-            </a>
+                <a href="./main.html" class="flex items-center">
+                    <span class="self-center text-3xl font-bold whitespace-nowrap">Pet Pal</span>
+                </a>
             </div>
         </nav>
     </header>
-    <section  class="bg-gray-50">
+    <section class="bg-gray-50">
         <div class="flex flex-col items-center justify-center px-6 py-8 mx-auto md:h-screen lg:py-0">
             <!-- <a href="#" class="flex items-center mb-6 text-2xl font-semibold text-gray-900">
                 Pet Pal    
@@ -33,20 +35,28 @@
                     <form class="space-y-4 md:space-y-6" action="#">
                         <div>
                             <label for="email" class="block mb-2 text-sm font-medium text-gray-900 ">Email</label>
-                            <input type="email" name="email" id="email" class="bg-gray-50 border border-gray-300 text-gray-900 sm:text-sm rounded-lg focus:ring-primary-600 focus:border-primary-600 block w-full p-2.5" placeholder="name@company.com" required="">
+                            <input type="email" name="email" id="email"
+                                class="bg-gray-50 border border-gray-300 text-gray-900 sm:text-sm rounded-lg focus:ring-primary-600 focus:border-primary-600 block w-full p-2.5"
+                                placeholder="name@company.com" required="">
                         </div>
                         <div>
                             <div class="flex justify-between items-center">
-                                <label for="password" class="block mb-2 text-sm font-medium text-gray-900 ">Password</label>
-                                <a href="./forgot_pw.html" class="inline-block mb-2 text-sm font-light text-gray-500 hover:underline">Forgot Password?</a>
+                                <label for="password"
+                                    class="block mb-2 text-sm font-medium text-gray-900 ">Password</label>
+                                <a href="./forgot_pw.html"
+                                    class="inline-block mb-2 text-sm font-light text-gray-500 hover:underline">Forgot
+                                    Password?</a>
                             </div>
-                            
-                            <input type="password" name="password" id="password" placeholder="••••••••" class="bg-gray-50 border border-gray-300 text-gray-900 sm:text-sm rounded-lg focus:ring-primary-600 focus:border-primary-600 block w-full p-2.5 " required="">
+
+                            <input type="password" name="password" id="password" placeholder="••••••••"
+                                class="bg-gray-50 border border-gray-300 text-gray-900 sm:text-sm rounded-lg focus:ring-primary-600 focus:border-primary-600 block w-full p-2.5 "
+                                required="">
                         </div>
 
                         <!-- <button type="submit" class="w-full text-white bg-blue-600 hover:bg-primary-700 hover:bg-gray-900 :ring-4 focus:outline-none focus:ring-primary-300 font-medium rounded-lg text-medium px-5 py-2.5 text-center"> -->
                         <div>
-                            <a href="./login_error_seeker.html" type="button" class="w-full text-white bg-blue-600 hover:bg-primary-700 hover:bg-gray-900 :ring-4 focus:outline-none focus:ring-primary-300 font-medium rounded-lg text-medium px-5 py-2.5 text-center">
+                            <a href="./login_error_seeker.html" type="button"
+                                class="w-full text-white bg-blue-600 hover:bg-primary-700 hover:bg-gray-900 :ring-4 focus:outline-none focus:ring-primary-300 font-medium rounded-lg text-medium px-5 py-2.5 text-center">
                                 Log In
                             </a>
                         </div>
@@ -54,7 +64,8 @@
                         <!-- </button> -->
 
                         <p class="text-sm font-medium text-gray-500">
-                            Don't have an account? <a href="./seeker_signup.html" class="font-medium text-blue-600 hover:underline">Sign Up</a>
+                            Don't have an account? <a href="./seeker_signup.html"
+                                class="font-medium text-blue-600 hover:underline">Sign Up</a>
                         </p>
                     </form>
                 </div>
@@ -65,4 +76,5 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/flowbite/1.8.1/flowbite.min.js"></script>
 
 </body>
+
 </html>
